Trying to fix off center maps and KML not loading correctly.

--- a/themes/wtm/css/wtm.css
+++ b/themes/wtm/css/wtm.css
@@ -443,7 +443,8 @@ div.map.timeline-enabled {height:529px; background:#666;}
 #mapStatus,
 .big-block .olControlScale div, 
 .big-block .olControlMousePosition{ 
-    width:270px; float:none; overflow:auto; 
+    width:270px; float:none; 
+    overflow:hidden;
     position: relative;
     top: -40px;
     left:227px;
